--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "blueimp-file-upload": "^9.28.0",
     "bootstrap": "^5.1.3",
+    "cloudinary-jquery-file-upload": "^2.13.0",
     "firebase": "^8.2.0",
+    "jquery": "^3.6.0",
+    "multer": "^1.4.5-lts.1",
     "next": "12.0.7",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
