--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     ]
   },
   "dependencies": {
+    "@cloudinary/url-gen": "^1.8.6",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.3",
     "cloudinary-react": "^1.8.1",
