--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-dom": "17.0.2",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-simple-star-rating": "^4.0.5"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
