--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.4.0",
+    "react-select": "^5.4.0",
     "react-simple-star-rating": "^4.0.5"
   },
   "devDependencies": {
