--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.1.3",
     "cloudinary-react": "^1.8.1",
     "firebase": "^8.2.0",
+    "moment": "^2.29.4",
     "next": "12.0.7",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
