--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "dependencies": {
     "@cloudinary/url-gen": "^1.8.6",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.6",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.3",
     "cloudinary-react": "^1.8.1",
