--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     ]
   },
   "dependencies": {
-    "@cloudinary/url-gen": "^1.8.6",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.6",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "bootstrap": "^5.1.3",
-    "cloudinary-react": "^1.8.1",
+    "cloudinary": "^1.32.0",
+    "dotenv": "^16.0.3",
     "firebase": "^8.2.0",
     "moment": "^2.29.4",
     "next": "12.0.7",
@@ -35,7 +35,8 @@
     "react-icons": "^4.4.0",
     "react-ip-details": "^1.2.6",
     "react-select": "^5.4.0",
-    "react-simple-star-rating": "4.0.5"
+    "react-simple-star-rating": "4.0.5",
+    "sha1": "^1.1.1"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
